# sysinfo

./: sysinfo
cmake/: CMakeLists.txt  README.cmake  build.bash  postinst  postrm
